--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -10,9 +10,9 @@ $fuenteTexto: "Roboto", sans-serif;
     padding: 0;
 }
 
-html {
-    font-weight: 62,5%;
-}
+// html {
+//     font-weight: 62,5%;
+// }
 
 body {
     background-image: linear-gradient( to left, white , grey );
