--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,10 @@ body {
   background-image: linear-gradient(to left, white, grey);
 }
 
-.inicio__texto1 {
+.inicio__textos {
+  display: flex;
+}
+.inicio__textos .inicio__texto1 {
   display: inline-block;
   width: 80%;
   margin-top: 1rem;
@@ -20,13 +23,12 @@ body {
   margin-bottom: 0;
   padding: 1rem;
 }
-.inicio__texto1 h2 {
+.inicio__textos .inicio__texto1 h2 {
   text-align: center;
   margin-bottom: 7px;
   border-bottom: 3px;
 }
-
-.inicio__texto2 {
+.inicio__textos .inicio__texto2 {
   display: inline-block;
   width: 80%;
   margin-top: 1rem;
@@ -35,7 +37,7 @@ body {
   margin-bottom: 1rem;
   padding: 1rem;
 }
-.inicio__texto2 h3 {
+.inicio__textos .inicio__texto2 h3 {
   text-align: center;
   margin-bottom: 7px;
   border-bottom: 3px;
