--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -25,7 +25,7 @@ body {
 
     .inicio__texto1 {
     
-        display: inline-block;
+        // display: inline-block;
     
         width: 80%;
     
@@ -43,7 +43,7 @@ body {
         }
     }
     .inicio__texto2 {
-        display: inline-block;
+        // display: inline-block;
     
         width: 80%;
     
