--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .inicio__textos .inicio__texto1 {
-  display: inline-block;
+  display: flex;
   width: 60%;
   margin-top: 1rem;
   margin-left: 5rem;
