--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -25,14 +25,14 @@ body {
 
     .inicio__texto1 {
     
-        display: flex;
+        // display: inline-block;
     
         width: 60%;
     
         margin-top: 1rem;
         margin-left: 5rem;
-        margin-right: 2rem;
-        margin-bottom: 0;
+        margin-right: 5rem;
+        margin-bottom: 1rem;
         padding: 1rem;
     
         h2 {
