--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -18,10 +18,14 @@ body {
     background-image: linear-gradient( to left, white , grey );
 }
 
-
 .inicio__textos {
 
-    // display: flex;
+    
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
 
     .inicio__texto1 {
     
@@ -29,6 +33,8 @@ body {
     
         width: 80%;
     
+        align-items: center;
+
         margin-top: 1rem;
         margin-left: 5rem;
         margin-right: 5rem;
@@ -49,7 +55,7 @@ body {
     
         margin-top: 1rem;
         margin-left: 5rem;
-        margin-right: 2rem;
+        margin-right: 5rem;
         margin-bottom: 1rem;
     
         padding: 1rem;
