--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,8 +11,16 @@ body {
   background-image: linear-gradient(to left, white, grey);
 }
 
+.inicio__textos {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+}
 .inicio__textos .inicio__texto1 {
   width: 80%;
+  align-items: center;
   margin-top: 1rem;
   margin-left: 5rem;
   margin-right: 5rem;
@@ -28,7 +36,7 @@ body {
   width: 80%;
   margin-top: 1rem;
   margin-left: 5rem;
-  margin-right: 2rem;
+  margin-right: 5rem;
   margin-bottom: 1rem;
   padding: 1rem;
 }
