--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,25 +117,33 @@ textarea {
   padding-left: 15px;
 }
 .footer .footer__redes {
+  display: inline-block;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  list-style: none;
   text-decoration: none;
-  padding: 5px;
+  padding: 1rem;
+  margin: 1rem;
 }
 
 .footer__redes--facebook {
-  padding: 10px;
-  background-color: #3a5795;
+  padding: 5px;
 }
 
 .footer__redes--instagram {
-  padding: 10px;
-  background-color: #55acee;
+  padding: 5px;
 }
 
 .footer__redes--mail {
-  padding: 10px;
-  background-color: #c25e30;
+  padding: 5px;
 }
 
+@media (max-width: 640px) {
+  .footer {
+    flex-direction: column;
+  }
+}
 .html {
   -webkit-animation: aparecer 1s;
           animation: aparecer 1s;
