--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -36,40 +36,54 @@
         padding: 5px;
         margin: 1rem;
         
-        li{
-            a{
-
-                .footer__redes--instagram {
-                    padding: 5px;
-                    text-decoration: none;
-                    color: white;
-                }
-                .footer__redes--facebook{
-                    padding: 5px;
-                    text-decoration: none;
-                    color: white;
-                }
-                .footer__redes--linkedin{
-                    padding: 5px;
-                    text-decoration: none;
-                    color: white;
-                }
-                .footer__redes--mail{
-                    padding: 5px;
-                    text-decoration: none;
-                    color: white;
-                }
-            }
+        .footer__redes--instagram {
+            padding: 5px;
+            text-decoration: none;
+            color: white;
+        }
+        .footer__redes--facebook{
+            padding: 5px;
+            text-decoration: none;
+            color: white;
+        }
+        .footer__redes--linkedin{
+            padding: 5px;
+            text-decoration: none;
+            color: white;
+        }
+        .footer__redes--mail{
+            padding: 5px;
+            text-decoration: none;
+            color: white;
         }
     }
 
     
 }
 
-
+// $redes: (
+//     facebook: blue ,
+//     instagram:  red,
+//     mail: #c25e30,
+//     linkedin: green,
+//     );
+    
+//     @each $red, $color in $redes {
+//         .footer__redes--#{$red} {
+//             padding: 5px;
+//             text-decoration: none;
+//             color: white;
+//             // background-color: $color;
+//             li{
+//                 a{
+//                 }
+//             }
+//         }
+        
+//     }
     
     
-@media (max-width: 640px) {
+@media (max-width: 914px) {
     .footer{
         flex-direction: column;
     }
