--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,28 +130,28 @@ textarea {
   padding: 5px;
   margin: 1rem;
 }
-.footer .footer__redes li a .footer__redes--instagram {
+.footer .footer__redes .footer__redes--instagram {
   padding: 5px;
   text-decoration: none;
   color: white;
 }
-.footer .footer__redes li a .footer__redes--facebook {
+.footer .footer__redes .footer__redes--facebook {
   padding: 5px;
   text-decoration: none;
   color: white;
 }
-.footer .footer__redes li a .footer__redes--linkedin {
+.footer .footer__redes .footer__redes--linkedin {
   padding: 5px;
   text-decoration: none;
   color: white;
 }
-.footer .footer__redes li a .footer__redes--mail {
+.footer .footer__redes .footer__redes--mail {
   padding: 5px;
   text-decoration: none;
   color: white;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 914px) {
   .footer {
     flex-direction: column;
   }
