--- a/styles/styles.css
+++ b/styles/styles.css
@@ -209,16 +209,29 @@ textarea {
 .producto__body .producto__listacategorias {
   width: 900px;
 }
-.producto__body .producto__categorias {
+.producto__body .producto__listacategorias .list-group-item:hover {
+  transition: 0.7s;
+  background-color: gold;
+}
+.producto__body .producto__listacategorias .producto__categorias {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   margin: 5px;
   margin-left: 0px;
 }
-.producto__body .producto__categorias .card {
+.producto__body .producto__listacategorias .producto__categorias .card {
   margin: 5px;
   list-style: none;
+}
+.producto__body .producto__listacategorias .producto__categorias .card .producto__boton--compra {
+  background-color: grey;
+  border: gold;
+  margin-right: 2rem;
+}
+.producto__body .producto__listacategorias .producto__categorias .card .producto__boton--compra:hover {
+  transition: 0.7s;
+  background-color: gold;
 }
 
 @media (max-width: 1140px) {
