--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,17 +274,19 @@ textarea {
   padding: 1rem;
   margin-top: 2rem;
   display: grid;
-  justify-content: center;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
   gap: 1rem;
 }
-.nosotros__sobrenosotros .sobrenosotros__carta {
-  justify-content: center;
-  align-items: center;
-}
 
-.nosotros__texto1 {
+.nosotros__textos {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.nosotros__textos .nosotros__texto1 {
   display: inline-block;
   width: 80%;
   margin-top: 1rem;
@@ -293,32 +295,47 @@ textarea {
   margin-bottom: 0;
   padding: 1rem;
 }
-.nosotros__texto1 h2 {
+.nosotros__textos .nosotros__texto1 h2 {
   text-align: center;
   margin-bottom: 7px;
   border-bottom: 3px;
 }
-
-.nosotros__texto2 {
-  display: inline-block;
+.nosotros__textos .nosotros__texto2 {
   width: 80%;
+  align-items: center;
   margin-top: 1rem;
   margin-left: 5rem;
   margin-right: 2rem;
   margin-bottom: 1rem;
   padding: 1rem;
 }
-.nosotros__texto2 h3 {
+.nosotros__textos .nosotros__texto2 h3 {
   text-align: center;
   margin-bottom: 7px;
   border-bottom: 3px;
 }
 
-@media (max-width: 790px) {
+@media (max-width: 405px) {
   .nosotros__sobrenosotros {
     grid-column: 1fr;
     grid-row: 1fr 1fr 1fr;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  .nosotros__sobrenosotros .sobrenosotros__carta {
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 790px) {
+  .nosotros__sobrenosotros {
+    grid-column: 1fr;
     margin: 0px;
+    justify-content: center;
+    align-items: center;
+  }
+  .nosotros__sobrenosotros .sobrenosotros__carta {
     justify-content: center;
     align-items: center;
   }
@@ -328,6 +345,12 @@ textarea {
     grid-template-columns: 1fr;
     justify-content: center;
     justify-content: center;
+    align-items: stretch;
+  }
+  .nosotros__sobrenosotros .sobrenosotros__carta {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
   }
 }
 .benchmark__texto1 {
