--- a/styles/_pagproducto.scss
+++ b/styles/_pagproducto.scss
@@ -17,7 +17,6 @@
 
 
     }
-
     .producto__categorias{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -48,26 +47,83 @@
     }
 }
 
+
 @media (max-width: 1140px) {
     .producto__body {
         display: flex;
+
+        .producto__listacategorias{
+            width: 900px;
+    
+            .list-group-item{
+            
+                &:focus {
+                    color: $colorSecundario;
+                    background-color: $colorTerciario ;
+                }
+                &:hover {
+                    transition: 0.7s;
+                    background-color: $colorTerciario ;
+            }
+        }
+        
     
         .producto__categorias {
         grid-template-columns:  1fr 1fr;
         grid-template-rows: auto;
+
+            .card {
+                margin: 5px;
+                list-style: none;
+
+            .producto__boton--compra {
+
+                background-color: grey;
+        
+                border: $colorTerciario;
+        
+                margin-right: 2rem;
+        
+                &:hover {
+                    transition: 0.7s;
+                    background-color: $colorTerciario ;
+                }
+            }
+            }
         }
     }
+    }
 }
+
+
+
+
 
 @media (max-width: 840px) {
     .producto__body {
         display: flex;
     
+        .producto__listacategorias{
+            width: 900px;
+    
+            .list-group-item{
+            
+                &:focus {
+                    color: $colorSecundario;
+                    background-color: $colorTerciario ;
+                }
+                &:hover {
+                    transition: 0.7s;
+                    background-color: $colorTerciario ;
+            }
+        }
+
     .producto__categorias {
         grid-template-columns:  1fr ;
         grid-template-rows: auto;
         }
     }
+}
 }
 
 
@@ -76,14 +132,19 @@
         display: flex;
 
         .producto__listacategorias{
-            display: inline-block;
-            width: 900px;
-            margin-bottom: 5px;
+            .col-3{
 
-            .producto__categorias {
-                grid-template-columns:  1fr ;
-                grid-template-rows: auto;
+                display: inline-block;
+                width: 100%;
+                margin-bottom: 5px;
+                padding-left: 1rem;
+
+                .producto__categorias {
+                    grid-template-columns:  1fr ;
+                    grid-template-rows: auto;
+                    }
                 }
+
             }
 
         }
