--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,7 +243,7 @@ textarea {
     display: flex;
   }
   .producto__body .producto__listacategorias {
-    width: 900px;
+    width: 800px;
   }
   .producto__body .producto__listacategorias .list-group-item:focus {
     color: black;
@@ -276,7 +276,7 @@ textarea {
     display: flex;
   }
   .producto__body .producto__listacategorias {
-    width: 900px;
+    width: 800px;
   }
   .producto__body .producto__listacategorias .list-group-item:focus {
     color: black;
@@ -309,7 +309,8 @@ textarea {
     display: flex;
   }
   .producto__body .producto__listacategorias {
-    width: 900px;
+    display: inline-block;
+    width: 100%;
   }
   .producto__body .producto__listacategorias .list-group-item:focus {
     color: black;
@@ -323,20 +324,56 @@ textarea {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
+  .producto__body .producto__listacategorias .producto__categorias .card {
+    margin: 5px;
+    list-style: none;
+  }
+  .producto__body .producto__listacategorias .producto__categorias .card .producto__boton--compra {
+    background-color: grey;
+    border: gold;
+    margin-right: 2rem;
+  }
+  .producto__body .producto__listacategorias .producto__categorias .card .producto__boton--compra:hover {
+    transition: 0.7s;
+    background-color: gold;
+  }
 }
-@media (max-width: 540px) {
+@media (max-width: 840px) {
   .producto__body {
     display: flex;
   }
-  .producto__body .producto__listacategorias .col-3 {
+  .producto__body .producto__listacategorias {
     display: inline-block;
+  }
+  .producto__body .producto__listacategorias .col-3 {
     width: 100%;
     margin-bottom: 5px;
     padding-left: 1rem;
   }
-  .producto__body .producto__listacategorias .col-3 .producto__categorias {
+  .producto__body .producto__listacategorias .list-group-item:focus {
+    color: black;
+    background-color: gold;
+  }
+  .producto__body .producto__listacategorias .list-group-item:hover {
+    transition: 0.7s;
+    background-color: gold;
+  }
+  .producto__body .producto__listacategorias .producto__categorias {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+  }
+  .producto__body .producto__listacategorias .producto__categorias .card {
+    margin: 5px;
+    list-style: none;
+  }
+  .producto__body .producto__listacategorias .producto__categorias .card .producto__boton--compra {
+    background-color: grey;
+    border: gold;
+    margin-right: 2rem;
+  }
+  .producto__body .producto__listacategorias .producto__categorias .card .producto__boton--compra:hover {
+    transition: 0.7s;
+    background-color: gold;
   }
 }
 .nosotros__sobrenosotros {
