--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,4 +472,33 @@ textarea {
 
 .efectoimagen {
   width: 30rem;
+}
+
+@media (max-width: 468px) {
+  .formulario {
+    width: 95%;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 30px;
+    border-radius: 10px;
+  }
+  .formulario .formulario__contacto {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .formulario .formulario__contacto h3 {
+    text-align: left;
+    width: 100px;
+    margin: 20px 0;
+    border-bottom: orangered 2px solid;
+  }
+  .formulario .formulario__contacto .formulario__input .formulario__contacto textarea {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: none;
+  }
+  .formulario .formulario__contacto .formulario__input .formulario__boton--enviar:hover {
+    transition: 0.7s;
+    background-color: gold;
+  }
 }/*# sourceMappingURL=styles.css.map */
