--- a/styles/styles.css
+++ b/styles/styles.css
@@ -425,6 +425,25 @@ body {
   border-bottom: 3px;
 }
 
+.benchmark__acordeon {
+  width: 80%;
+  align-items: center;
+  text-align: center;
+  margin-left: 5rem;
+}
+.benchmark__acordeon .accordion .accordion-item .accordion-header {
+  display: flex;
+}
+.benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button {
+  text-align: center;
+  align-content: center;
+  align-items: center;
+}
+.benchmark__acordeon .accordion .accordion-item .benchmark__banner--boton img {
+  width: 60%;
+  margin-top: 1rem;
+}
+
 .contacto__banner--principal {
   width: 100%;
   height: 600px;
