--- a/styles/_pagbenchmark.scss
+++ b/styles/_pagbenchmark.scss
@@ -1,22 +1,33 @@
+.benchmark__textos {
 
-.benchmark__texto1 {
-    display: inline-block;
-
-    width: 80%;
-
-    margin-top: 1rem;
-    margin-left: 5rem;
-    margin-right: 2rem;
-    margin-bottom: 0;
-    padding: 1rem;
-
-    h2 {
-        text-align: center;
-        margin-bottom: 7px;
     
-        border-bottom: 3px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin-bottom: 1rem;
+
+    .benchmark__texto1 {
+        // display: inline-block;
+    
+        width: 80%;
+    
+        margin-top: 1rem;
+        margin-left: 5rem;
+        margin-right: 2rem;
+        margin-bottom: 0;
+        padding: 1rem;
+    
+        h2 {
+            text-align: center;
+            margin-bottom: 7px;
+        
+            border-bottom: 3px;
+        }
     }
 }
+
 
 .benchmark__acordeon{
 
@@ -26,28 +37,124 @@
     margin-left: 5rem;
 
     .accordion{
-        
+        margin-top: 1rem;
+
         .accordion-item{
             
             .accordion-header{
                 display: flex;
-
+                
                 .accordion-button{
+                    color: $colorSecundario;
                     text-align: center;
                     align-content: center;
                     align-items: center;
+
+                    &:focus {
+                        
+                        background-color: $colorTerciario ;
+                    }
+                    &:hover {
+                        transition: 0.7s;
+                        background-color: $colorTerciario ;
+                    }
                 }
             }
 
             .benchmark__banner--boton{
                 img {
 
+                    box-shadow: 2px 2px 2px 2px black;
                     width: 60%;
                     margin-top: 1rem;
 
-                    
+                    &:hover {
+                        translate: scale(10rem);
+                    }
+
                 }
             }
         }
     }
+}
+
+@media (max-width: 500px) {
+
+    .benchmark__textos {
+
+    
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+        margin-bottom: 1rem;
+    
+        .benchmark__texto1 {
+            // display: inline-block;
+        
+            width: 80%;
+        
+            margin-top: 1rem;
+            margin-left: 1rem;
+            margin-right: 2rem;
+            margin-bottom: 0;
+            padding: 1rem;
+        
+            h2 {
+                text-align: center;
+                margin-bottom: 7px;
+            
+                border-bottom: 3px;
+            }
+        }
+    }
+    
+    
+    .benchmark__acordeon{
+    
+        width: 80%;
+        align-items: center;
+        text-align: center;
+        margin-left: 1rem;
+    
+        .accordion{
+            margin-top: 1rem;
+    
+            .accordion-item{
+                
+                .accordion-header{
+                    display: flex;
+                    
+                    .accordion-button{
+                        color: $colorSecundario;
+                        text-align: center;
+                        align-content: center;
+                        align-items: center;
+    
+                        &:focus {
+                            
+                            background-color: $colorTerciario ;
+                        }
+                        &:hover {
+                            transition: 0.7s;
+                            background-color: $colorTerciario ;
+                        }
+                    }
+                }
+    
+                .benchmark__banner--boton{
+                    img {
+    
+                        box-shadow: 2px 2px 2px 2px black;
+                        width: 60%;
+                        margin-top: 1rem;
+    
+    
+                    }
+                }
+            }
+        }
+    }
+
 }
