--- a/styles/styles.css
+++ b/styles/styles.css
@@ -410,8 +410,15 @@ body {
     align-items: center;
   }
 }
-.benchmark__texto1 {
-  display: inline-block;
+.benchmark__textos {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  margin-bottom: 1rem;
+}
+.benchmark__textos .benchmark__texto1 {
   width: 80%;
   margin-top: 1rem;
   margin-left: 5rem;
@@ -419,7 +426,7 @@ body {
   margin-bottom: 0;
   padding: 1rem;
 }
-.benchmark__texto1 h2 {
+.benchmark__textos .benchmark__texto1 h2 {
   text-align: center;
   margin-bottom: 7px;
   border-bottom: 3px;
@@ -431,19 +438,88 @@ body {
   text-align: center;
   margin-left: 5rem;
 }
+.benchmark__acordeon .accordion {
+  margin-top: 1rem;
+}
 .benchmark__acordeon .accordion .accordion-item .accordion-header {
   display: flex;
 }
 .benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button {
+  color: black;
   text-align: center;
   align-content: center;
   align-items: center;
 }
+.benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button:focus {
+  background-color: gold;
+}
+.benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button:hover {
+  transition: 0.7s;
+  background-color: gold;
+}
 .benchmark__acordeon .accordion .accordion-item .benchmark__banner--boton img {
+  box-shadow: 2px 2px 2px 2px black;
   width: 60%;
   margin-top: 1rem;
 }
+.benchmark__acordeon .accordion .accordion-item .benchmark__banner--boton img:hover {
+  translate: scale(10rem);
+}
 
+@media (max-width: 500px) {
+  .benchmark__textos {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    margin-bottom: 1rem;
+  }
+  .benchmark__textos .benchmark__texto1 {
+    width: 80%;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 2rem;
+    margin-bottom: 0;
+    padding: 1rem;
+  }
+  .benchmark__textos .benchmark__texto1 h2 {
+    text-align: center;
+    margin-bottom: 7px;
+    border-bottom: 3px;
+  }
+
+  .benchmark__acordeon {
+    width: 80%;
+    align-items: center;
+    text-align: center;
+    margin-left: 1rem;
+  }
+  .benchmark__acordeon .accordion {
+    margin-top: 1rem;
+  }
+  .benchmark__acordeon .accordion .accordion-item .accordion-header {
+    display: flex;
+  }
+  .benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button {
+    color: black;
+    text-align: center;
+    align-content: center;
+    align-items: center;
+  }
+  .benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button:focus {
+    background-color: gold;
+  }
+  .benchmark__acordeon .accordion .accordion-item .accordion-header .accordion-button:hover {
+    transition: 0.7s;
+    background-color: gold;
+  }
+  .benchmark__acordeon .accordion .accordion-item .benchmark__banner--boton img {
+    box-shadow: 2px 2px 2px 2px black;
+    width: 60%;
+    margin-top: 1rem;
+  }
+}
 .contacto__banner--principal {
   width: 100%;
   height: 600px;
