--- a/styles/styles.css
+++ b/styles/styles.css
@@ -330,19 +330,24 @@ body {
 .nosotros__listacartas {
   display: flex;
   width: 100%;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  justify-items: center;
 }
 .nosotros__listacartas .nosotros__sobrenosotros {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  justify-content: center;
+  display: flex;
   align-items: center;
-  text-align: center;
-  padding: 1rem;
+  margin: 1rem;
+  width: 100%;
+  flex-direction: row;
+  margin-left: 9.5rem;
+  margin-right: 9.5rem;
 }
 .nosotros__listacartas .nosotros__sobrenosotros .sobrenosotros__carta {
   padding: 5px;
-  width: 400px;
+  margin: 5px;
+  width: 500px;
   height: 225px;
 }
 
@@ -352,13 +357,12 @@ body {
   flex-direction: column;
   align-items: center;
   flex-wrap: nowrap;
+  justify-items: center;
 }
 .nosotros__textos .nosotros__texto1 {
   display: inline-block;
   width: 80%;
   margin-top: 1rem;
-  margin-left: 5rem;
-  margin-right: 2rem;
   margin-bottom: 0;
   padding: 1rem;
 }
@@ -371,9 +375,8 @@ body {
   width: 80%;
   align-items: center;
   margin-top: 1rem;
-  margin-left: 5rem;
-  margin-right: 2rem;
   margin-bottom: 1rem;
+  justify-items: center;
   padding: 1rem;
 }
 .nosotros__textos .nosotros__texto2 h3 {
@@ -382,42 +385,73 @@ body {
   border-bottom: 3px;
 }
 
-@media (max-width: 405px) {
-  .nosotros__sobrenosotros {
-    grid-column: 1fr;
-    grid-row: 1fr 1fr 1fr;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
-  }
-  .nosotros__sobrenosotros .sobrenosotros__carta {
-    justify-content: center;
-    align-items: center;
-  }
-}
-@media (max-width: 790px) {
-  .nosotros__sobrenosotros {
-    grid-column: 1fr;
-    margin: 0px;
-    justify-content: center;
-    align-items: center;
-  }
-  .nosotros__sobrenosotros .sobrenosotros__carta {
-    justify-content: center;
-    align-items: center;
-  }
-}
-@media (max-width: 1040px) {
-  .nosotros__sobrenosotros {
-    grid-template-columns: 1fr;
-    justify-content: center;
-    justify-content: center;
-    align-items: stretch;
-  }
-  .nosotros__sobrenosotros .sobrenosotros__carta {
+@media (max-width: 1170px) {
+  .nosotros__listacartas {
+    display: flex;
     width: 100%;
     justify-content: center;
+    text-align: center;
+    justify-items: center;
+  }
+  .nosotros__listacartas .nosotros__sobrenosotros {
+    display: flex;
     align-items: center;
+    width: 100%;
+    flex-direction: row;
+  }
+  .nosotros__listacartas .nosotros__sobrenosotros .sobrenosotros__carta {
+    padding: 5px;
+    margin: 5px;
+    width: 500px;
+    height: 225px;
+  }
+}
+@media (max-width: 980px) {
+  .nosotros__listacartas {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    justify-items: center;
+  }
+  .nosotros__listacartas .nosotros__sobrenosotros {
+    display: flex;
+    align-items: center;
+    margin: 1rem;
+    width: 100%;
+    flex-direction: column;
+    margin-left: 1rem;
+  }
+  .nosotros__listacartas .nosotros__sobrenosotros .sobrenosotros__carta {
+    padding: 5px;
+    margin: 5px;
+    width: 500px;
+    height: 225px;
+  }
+}
+@media (max-width: 375px) {
+  .nosotros__listacartas {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .nosotros__listacartas .nosotros__sobrenosotros {
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: 300px;
+    flex-direction: column;
+  }
+  .nosotros__listacartas .nosotros__sobrenosotros .sobrenosotros__carta {
+    padding: 0;
+    margin-top: 5px;
+    width: 260px;
+    height: 200px;
   }
 }
 .benchmark__textos {
