--- a/styles/_pagnosotros.scss
+++ b/styles/_pagnosotros.scss
@@ -10,11 +10,9 @@
         
         display: flex;
         align-items: center;
-        margin: 1rem;
-        width: 100%;
+        margin-top: 1rem;
         flex-direction: row;
-        margin-left: 9.5rem;
-        margin-right: 9.5rem;
+
 
         
         
@@ -23,6 +21,7 @@
             margin: 5px;
             width: 500px;
             height: 225px;
+
             
         }
         
@@ -99,7 +98,6 @@
             
             display: flex;
             align-items: center;
-            width: 100%;
             flex-direction: row;
             
             
